testsuite/tests/statmemprof/exception_callback_minor.reference
Fatal error: exception File "exception_callback_minor.ml", line 16, characters 30-36: Assertion failed
